--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
     "react": "^18.2.0",
+    "react-animations": "^1.0.0",
+    "react-awesome-reveal": "^4.2.3",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "react-router-dom": "^6.8.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
