--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
+    "@types/react-icons": "^3.0.0",
     "axios": "^1.2.6",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.3",
